# snow

./: .gitignore  CMakeLists.txt  README.md  example_usage.cpp
include/: base_log.h
test/: test_base_log.cpp  test_example.cpp
